--- a/test/test.csproj
+++ b/test/test.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\src\day1\Day1.csproj" />
     <ProjectReference Include="..\src\Day2\Day2.csproj" />
+    <ProjectReference Include="..\src\Day3\Day3.csproj" />
   </ItemGroup>
 
 </Project>
