--- a/test/test.csproj
+++ b/test/test.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\src\Day2\Day2.csproj" />
     <ProjectReference Include="..\src\Day3\Day3.csproj" />
     <ProjectReference Include="..\src\day4\Day4.csproj" />
+    <ProjectReference Include="..\src\day5\Day5.csproj" />
   </ItemGroup>
 
 </Project>
