--- a/test/test.csproj
+++ b/test/test.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\src\Day3\Day3.csproj" />
     <ProjectReference Include="..\src\day4\Day4.csproj" />
     <ProjectReference Include="..\src\day5\Day5.csproj" />
+    <ProjectReference Include="..\src\day6\Day6.csproj" />
   </ItemGroup>
 
 </Project>
